fixed color contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,7 @@ nav {
 nav h1 {
   margin: auto;
   padding: 25px 20px;
+  background-color: brown;
 }
 nav h1 a {
   color: #fff;
@@ -209,7 +210,7 @@ nav h1 a {
 }
 
 #restaurants-list li a {
-  background-color:#a85900;
+  background-color:brown;
   /*border-bottom: 3px solid #eee;*/
   color: #f0f0f0;
   display: block;
